finished lab 3